[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neslter"
version = "0.1.0"
description = "Package description"  # You may want to update this
authors = [
    # Add your name and email here, e.g.:
    # {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "pandas>=1.2.0",
    "numpy",
    "scipy",
    "openpyxl",
    "lxml",
    "jinja2",
    "numexpr",
    "geopy",
]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE"}  # Update if you have a different license file

[project.urls]
# Add your repository URL and documentation if available
# "Homepage" = "https://github.com/username/neslter"
# "Documentation" = "https://neslter.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/neslter"]