[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neslter"
version = "0.1.0"
description = "Utilities for working with NES-LTER data"
authors = [
    {name = "Joe Futrelle", email = "jfutrelle@whoi.edu"}
]
dependencies = [
    "pandas>=1.2.0",
    "numpy",
    "scipy",
    "openpyxl",
    "lxml",
    "jinja2",
    "numexpr",
    "geopy",
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
# Add your repository URL and documentation if available
# "Homepage" = "https://github.com/username/neslter"
# "Documentation" = "https://neslter.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/neslter"]